# coug_comms

./: README.md  codecov.yml  dependencies.repos
.github/workflows/: ros2_build_and_test.yml
coug_comms/: CMakeLists.txt  package.xml
coug_comms/config/: coug_comms_params.yaml
coug_comms/include/coug_comms/: auv_receiver.hpp  auv_status_bundler.hpp  auv_status_stager.hpp  base_dispatcher.hpp  base_status_extractor.hpp  base_status_poller.hpp
coug_comms/include/coug_comms/utils/: comms_protocol.hpp  protocol_enums.hpp  seatrac_enums.hpp  status_codec.hpp
coug_comms/launch/: coug_comms_auv.launch.py  coug_comms_base.launch.py
coug_comms/params/: auv_receiver_params.yaml  auv_status_bundler_params.yaml  auv_status_stager_params.yaml  base_dispatcher_params.yaml  base_status_extractor_params.yaml  base_status_poller_params.yaml
coug_comms/src/: auv_receiver.cpp  auv_receiver_node.cpp  auv_status_bundler.cpp  auv_status_bundler_node.cpp  auv_status_stager.cpp  auv_status_stager_node.cpp  base_dispatcher.cpp  base_dispatcher_node.cpp  base_status_extractor.cpp  base_status_extractor_node.cpp  base_status_poller.cpp  base_status_poller_node.cpp
coug_comms/test/: test_status_codec.cpp
